@@ -1,5 +1,5 @@
 # configuration options for all flavours
-extra_cflags = -mno-plt
+CC = $(DEB_HOST_GNU_TYPE)-$(BASE_CC)$(DEB_GCC_VERSION) -no-pie
 
 # main library
 libc_rtlddir = /lib64
