@@ -64,6 +64,7 @@ glibc (2.29-0experimental0) UNRELEASED; urgency=medium
   * debian/testsuite-xfail-debian.mk: drop XFAILs that have been fixed for
     quite some time.
   * debian/control.in/main, debian/rules: build with GCC 9.
+  * debian/sysdeps/mips*.mk: drop -mno-plt, but keep -mno-pie.
 
   [ Sven Mueller ]
   * debian/rules: honor noudeb build profile.
